[package]
name = "clock"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "smol: ESP32-C3 SuperMini + 0.42\" SSD1306 OLED clock with WiFi/NTP + ESP-NOW"
license = "MIT OR Apache-2.0"

# -----------------------------------------------------------------------------
# THE MATCHED SET (issue #233 upgrade wave — esp-hal 1.1 / esp-radio 0.18).
#
# esp-radio (the renamed esp-wifi) compiles against esp-hal INTERNAL APIs, so
# the HAL / radio / scheduler / storage crates are a MATCHED SET: a mixed set
# fails to compile even when Cargo's semver check passes. The canonical trap
# from the old set was `Rng::new(RNG)` → `Rng::new()` (the peripheral argument
# was dropped in esp-hal 1.x); that is now RESOLVED — every call site here uses
# the arg-less `esp_hal::rng::Rng::new()` against esp-hal 1.1.
#
# The proven, mutually-compatible cluster (mirrors the esp32c6-watch reference,
# adapted C6→C3 / riscv32imac→riscv32imc):
#
#   esp-hal                 1.1.x
#   esp-radio               0.18.0   (was esp-wifi 0.15 — RENAMED crate)
#   esp-rtos                0.3.0    (NEW — the preemption scheduler that backs
#                                     esp-radio's os-adapter; replaces esp-wifi's
#                                     in-crate `builtin-scheduler` feature)
#   esp-wifi-sys-esp32c3    0.2.0    (per-chip raw bindings; aliased to esp_wifi_sys)
#   esp-alloc               0.10.0
#   esp-storage             0.9.0
#   esp-bootloader-esp-idf  0.5.0    (otadata/flash APIs changed — see src/ota.rs)
#   esp-backtrace           0.19.0
#   esp-println             0.17.0
#   smoltcp                 0.13.x   (esp-radio 0.18 has NO smoltcp feature — its
#                                     device impls embassy-net-driver only, so smol
#                                     provides its own smoltcp `phy::Device` shim in
#                                     src/net/radio_dev.rs over the raw rx/tx tokens)
#
# ARCHITECTURE NOTE: smol stays a SYNCHRONOUS superloop. esp-rtos is enabled with
# its `esp-radio` + `esp-alloc` features but NOT `embassy`: `esp_rtos::start()`
# converts the current context into the scheduler's main task and returns, so the
# existing blocking main() runs unchanged while the radio task is preempted in.
#
# ssd1306 0.10.0 + embedded-graphics 0.8 target embedded-hal 1.0, which esp-hal
# 1.x implements, so the display stack composes cleanly with the HAL.
# -----------------------------------------------------------------------------

[dependencies]
# --- Core HAL (Phase 1, always on) ---------------------------------------
# `unstable` is required for I2C/SPI/RNG and is also a hard requirement of
# esp-radio. `esp32c3` selects the chip. `rt` + `exception-handler` come from
# the default features (runtime + fault handler).
esp-hal = { version = "1.1", features = ["esp32c3", "unstable"], optional = true }
# NOTE: esp-hal's default features already install the exception handler, so
# esp-backtrace only provides the panic handler + backtrace printing here.
# Enabling esp-backtrace's `exception-handler` too causes a duplicate
# `ExceptionHandler` symbol and an LTO bitcode-load failure at link time.
esp-backtrace = { version = "0.19", features = ["esp32c3", "panic-handler", "println"], optional = true }
# Force the USB Serial/JTAG backend explicitly. This board's console is the
# native USB Serial/JTAG link (/dev/ttyACM0); esp-println's default `auto`
# backend only routes to USB-JTAG when it detects host SOF packets at the
# instant it writes, which proved unreliable during the busy WiFi burst and
# left app logs going to the (unwired) UART0. `jtag-serial` pins the output to
# USB-JTAG so boot/WiFi/NTP/ESP-NOW logs always appear on /dev/ttyACM0.
esp-println = { version = "0.17", default-features = false, optional = true, features = [
    "esp32c3",
    "log-04",
    "jtag-serial",
    "colors",
    "critical-section",
] }
log = "0.4"
# `nb::block!` turns esp-hal's non-blocking `Adc::read_oneshot` (nb::Result) into
# a short busy-wait for the battery-voltage read in `src/sensors.rs`. Resolves to
# the 1.1.0 already in the tree (embedded-hal etc. depend on it) — no lock churn.
nb = "1"

# --- Display stack (Phase 1) ---------------------------------------------
# ssd1306 is the concrete panel driver — HAL-facing (I2C), so it rides `hw`.
# embedded-graphics is pure (target-agnostic) and stays ALWAYS-on: both the
# firmware AND the #152 host/wasm emulator draw through it.
ssd1306 = { version = "=0.10.0", optional = true }
embedded-graphics = "=0.8.1"

# --- WiFi / NTP + radio (Phase 2, feature = "wifi") ----------------------
esp-alloc = { version = "0.10", optional = true }
# The preemption scheduler that backs esp-radio's `esp_radio_preempt_*` os-adapter
# hooks. In the old stack this was esp-wifi's in-crate `builtin-scheduler`; in the
# 0.18 stack it moved OUT to esp-rtos. We enable ONLY its `esp-radio` + `esp-alloc`
# drivers (NOT `embassy`) — smol is a blocking superloop, and `esp_rtos::start()`
# turns main() into the scheduler's pinned main task, so blocking code runs as-is.
esp-rtos = { version = "0.3", optional = true, features = [
    "esp32c3",
    "esp-radio",
    "esp-alloc",
    "log-04",
] }
# esp-wifi RENAMED → esp-radio in 0.18. `unstable` unlocks the raw rx/tx tokens
# (our smoltcp shim) + the `esp_now` interface. `default-features = false` drops
# esp-radio's default `esp-alloc` so we re-add it explicitly.
esp-radio = { version = "0.18", optional = true, default-features = false, features = [
    "esp32c3",
    "wifi",
    "esp-alloc",
    "unstable",
    "log-04",
] }
# #141 TX-power clamp + AP-info readback use raw esp-idf bindings. esp-radio's
# `sys` module is pub(crate), so we depend on the per-chip bindings crate directly
# and alias it to `esp_wifi_sys` — net.rs keeps `esp_wifi_sys::include::…` verbatim.
esp-wifi-sys = { package = "esp-wifi-sys-esp32c3", version = "0.2", optional = true, default-features = false }
smoltcp = { version = "0.13", optional = true, default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-udp",
    "socket-dhcpv4",
    "socket-tcp",
] }
# #233: esp-radio 0.18 made connect/disconnect/scan ASYNC-only (no blocking variants).
# smol is a synchronous superloop, so we drive those futures to completion with
# embassy-futures' busy-loop `block_on` (no executor needed; the esp-rtos scheduler
# preempts the busy loop to run the radio task that posts the completion events).
embassy-futures = { version = "0.1", optional = true }

# --- OTA (Phase B, issue #6) — HAL-decoupled, folded into `wifi` ----------
# Both optional + pulled ONLY by `wifi`, so the `default` (no-radio) build compiles
# NO OTA code. `esp32c3` on esp-bootloader-esp-idf is REQUIRED (its rom.rs pulls the
# chip's md5/crc). esp-storage gives XIP-safe flash writes; esp-bootloader-esp-idf
# gives the otadata slot/state API + esp_app_desc!.
esp-storage = { version = "0.9", optional = true, features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.5", optional = true, features = ["esp32c3"] }
# Software SHA-256 for the OTA image integrity gate. Chosen over the HW `esp_hal::sha`
# peripheral deliberately: peripheral-free + move-friendly. Cost is ~4 KB flash.
# Hashing is bound by the ~600 KB HTTP download, not the digest. (spec §Stage C-4.)
sha2 = { version = "0.10", default-features = false, optional = true }
# The `NorFlash` trait (erase/write) whose impl on esp-storage's FlashStorage the OTA
# ImageWriter drives.
embedded-storage = { version = "0.3", optional = true }
# #32 OTA authenticity: Ed25519 VERIFY-ONLY over the signed manifest ("build|size|sha256").
# no_std, pure-Rust, self-contained. Gated in `espnow`. ⚠️ REQUIRES the opt-z per-pkg
# override in [profile.release.package.ed25519-compact] below — without it the
# scalar-mult unrolls to ~1.19 MB and overflows the OTA slot.
ed25519-compact = { version = "2", default-features = false, optional = true }

# --- ESP-NOW (Phase 3, feature = "espnow") -------------------------------
# ESP-NOW lives inside esp-radio behind its `esp-now` feature (toggled below).

[features]
# Phase 1 only: clock on the OLED. `default` = `hw` so `cargo build --release` with no
# flags is the guaranteed-green firmware baseline — BYTE-IDENTICAL to before the #152
# split (the bare-metal crates were non-optional before; now they ride `hw`, which
# `default` and every firmware tier pull, so the same deps + code compile).
default = ["hw"]

# #152 host-emulator boundary. The bare-metal crates (esp-hal / esp-backtrace /
# esp-println / ssd1306) are `optional` so a NON-hardware target (the `hostsim` wasm lib)
# builds the pure game/render cores without them. `hw` re-bundles them; it is implied by
# `default` + `wifi` (⊃ espnow/io/cast/wled), so no firmware build changes.
hw = ["dep:esp-hal", "dep:esp-backtrace", "dep:esp-println", "dep:ssd1306"]

# #152 web emulator: compile the crate's LIBRARY (src/lib.rs) exposing ONLY the pure
# plugin/render cores (app contract + snake + clock + input Press + sensors/units host
# stubs) for a host/wasm target — NO `hw` crates, NO radio. Used solely by the `web-emu`
# cdylib; the firmware BIN (src/main.rs) is never compiled under this feature. Every
# hostsim change in the shared source is `#[cfg(feature="hostsim")]`/`#[cfg(not)]`, so the
# firmware (hw) path is untouched. See src/lib.rs.
hostsim = []

# #72 IO/component registry (ESPHome inverted, "fat image / thin runtime config").
# Compiles the digital-`Flex` driver menu into ONE image; a runtime pin-map relayed
# over the #56 keyed-CFG `G` channel selects which driver binds each free GPIO at
# boot — no recompile. Default-OFF so the default/wifi/espnow builds stay BYTE-FREE
# of it (#44): `src/io.rs` is `#![cfg(feature = "io")]` and every hook is cfg-gated.
# Implies `espnow`: the pin-map's transport (the CfgTracker relay + `take_cfg_offer`
# apply) lives in the ESP-NOW radio manager, and the fleet runs espnow end-to-end.
# v1 = digital in/out only (the provably-feasible `Flex` case); ADC/PWM/WS2812-RMT
# are deferred to v1.5/v2 behind the §2.4 bind-time spike.
io = ["espnow"]

# Phase 2: WiFi STA + SNTP time sync (+ optional weather).
# Also carries OTA (issue #6): the flash/otadata crates + esp-backtrace's
# `custom-halt` (panic→software_reset, MF-2) are pulled in HERE, not on the base
# esp-backtrace dep, so the `default` build's panic behavior stays the stock
# loop{} (OTA rollback semantics only matter once there's a radio to fetch over).
wifi = [
    "hw", # #152: every firmware tier carries the bare-metal crates (byte-identical to before)
    "dep:esp-alloc",
    "dep:esp-rtos",
    "dep:esp-radio",
    "dep:esp-wifi-sys",
    "dep:smoltcp",
    "dep:embassy-futures",
    "dep:esp-storage",
    "dep:esp-bootloader-esp-idf",
    "dep:sha2",
    "dep:embedded-storage",
    "esp-backtrace/custom-halt",
]

# Phase 3: ESP-NOW peer messaging + WiFi<->ESP-NOW switching.
# Builds on `wifi` (shares the radio init path); turns on esp-radio's `esp-now`.
# NOTE (#233): we deliberately do NOT enable esp-radio's `coex` feature. `coex` is the
# cross-radio (WiFi+BLE) coexistence arbiter and esp-radio's build script HARD-ERRORS if
# `coex` is set without `ble`. smol's WiFi<->ESP-NOW coexistence (#40/#23) is SAME-RADIO
# channel management (both live in the WiFi domain), not cross-radio arbitration — the old
# esp-wifi 0.15 build never enabled coex either. Pulling BLE in would also wedge the C3 in
# ROM (btdm init busy-wait — see the "native BLE refuted on C3" finding). So: esp-now only.
espnow = ["wifi", "esp-radio/esp-now", "dep:ed25519-compact"]

# #25 WLED WiZmote-emit: smol impersonates a WLED "linked remote" (13-B WiZmote
# ESP-NOW broadcast). Needs the ESP-NOW broadcast path + RadioManager, so it builds
# on `espnow`. Nothing new links — pure encode + the existing `esp_now.send`. The
# default build is BYTE-FREE of it (symbol-absence provable; net/wled.rs is
# `#![cfg(feature = "wled")]` and every hook is `#[cfg(feature = "wled")]`).
wled = ["espnow"]

# #26 smol Cast: mirror the gateway's OLED image onto a network WLED matrix as
# realtime UDP pixels (DNRGB, :21324) — NOT ESP-NOW (cleaner than #25's control path).
# Builds on `espnow` (⊃ `wifi`): casting is a GATEWAY-role activity — it needs an
# associated STA to reach the matrix AND the recurring gateway flush that carries the
# stream, both of which only the espnow build has (a wifi-only board only associates
# once at boot). Pure-additive: NO new crate links — a DrawTarget tee mirrors the
# framebuffer, a pure packer encodes DNRGB, and the existing flush association carries
# it. The default / wifi / espnow / wled builds are BYTE-FREE of it (`net::cast*` is
# `#[cfg(feature = "cast")]` and every hook is cfg-gated; the `Oled` type only swaps to
# the tee under this flag).
cast = ["espnow"]

# COEXIST SOAK (issue #23 PART 1 — the gating experiment, NOT for production).
# The gateway stays WiFi-associated after boot (no switch to ESP-NOW time-share),
# the mesh rides the AP channel (pinned to ch1 = north-bedroom), and mesh + MQTT
# flushes run CONCURRENTLY while the Bench beacon seq-gap loss/RTT is logged to
# serial. Builds on espnow. Everything it changes is `cfg(feature = "coexist-soak")`.
coexist-soak = ["espnow"]

# #13 MESH-TEST rig (NOT for production). A debug-only MAC deaf-list: a node silently
# drops inbound frames whose source MAC is in the per-board `board::DEAF_MACS`, so the
# 3-board fleet can be forced into a 2-hop topology (G→R→F) to validate routed multi-hop
# (scratch/smol-dreamteam/13-rig-design.md). Builds on espnow. Default-OFF so a production
# build is BYTE-FREE of it AND structurally CANNOT be made deaf (no field, no hook) — the
# strongest guard against a "won't-rejoin" leftover-deaf ghost. DIAG surfaces deaf=/ddrops=.
mesh-test = ["espnow"]

[profile.release]
# esp-radio strongly recommends opt-level "s"/2/3 and LTO; the radio blobs are
# timing-sensitive and misbehave when built at opt-level 0.
opt-level = "s"
lto = "fat"
codegen-units = 1
overflow-checks = false

# 🟥 #32 BUILD GATE (MANDATORY — spike-proven, issue-32-spike-result.md): without this,
# ed25519-compact's `double_scalarmult_vartime` inlines/unrolls under opt="s"+fat-LTO into a
# single ~1 MB function → total ed25519 symbols ~1.19 MB → the OTA image overflows the slot
# (0x1F0000). opt="z" collapses it 32× (~93 KB) → production image ~37% of slot. Per-PACKAGE
# only: the global stays opt="s" (the radio blobs' required timing). Verify runs once per OTA
# (~ms) on PUBLIC data, so size-over-speed here is free (constant-time not a concern).
[profile.release.package.ed25519-compact]
opt-level = "z"

[profile.dev]
opt-level = "s"
