# smol mesh visualizers — shared workspace (issues #158 / #159).
#
# DELIBERATELY separate from the embedded `rust/clock` workspace: these are HOST
# tools (x86_64, std, heavy GUI/engine deps) and must NEVER entangle the no_std C3
# firmware build or its pinned esp-hal lockfile.
#
# Members:
#   mesh-model  — shared MQTT ingest + topic→state fold + freshness aging (no UI).
#   observatory — Bevy "living constellation" showpiece (#159).
#
# meshscope (#158) currently lives at ../meshscope with its model INLINED (it merged
# first, PR #162). It converges into this workspace + depends on mesh-model in a
# follow-up PR; until then mesh-model here is a verbatim lift of meshscope's core
# (provenance: rust/meshscope @ 81ebb14) with one addition — a per-client MQTT id
# (two listeners sharing a client-id get kicked by the broker).
[workspace]
resolver = "2"
members = ["mesh-model", "observatory"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
mesh-model = { path = "mesh-model" }
rumqttc = "0.24"
serde_json = "1"
dotenvy = "0.15"

# Release builds are heavy (Bevy); keep them sane on the familiar build host.
[profile.release]
opt-level = 2
lto = "thin"

# Bevy is painfully slow in a fully-unoptimized debug build; optimize deps only so
# iterative dev builds of our own crates stay fast while the engine runs at speed.
[profile.dev.package."*"]
opt-level = 3
