# smol mesh visualizers — shared workspace (issues #158 / #159).
#
# DELIBERATELY separate from the embedded `rust/clock` workspace: these are HOST
# tools (x86_64, std, heavy GUI/engine deps) and must NEVER entangle the no_std C3
# firmware build or its pinned esp-hal lockfile.
#
# Members:
#   mesh-model  — shared MQTT ingest + topic→state fold + freshness aging (no UI).
#   observatory — Bevy "living constellation" showpiece (#159).
#
# meshscope (#158) is now a member here too (converged in #159): it depends on
# mesh-model and its inlined model copy was deleted, so both frontends fold identical
# state through one crate — a bug fixed in the model fixes both faces.
[workspace]
resolver = "2"
members = ["mesh-model", "meshscope", "observatory"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
mesh-model = { path = "mesh-model" }
rumqttc = "0.24"
serde_json = "1"
dotenvy = "0.15"

# Release builds are heavy (Bevy); keep them sane on the familiar build host.
[profile.release]
opt-level = 2
lto = "thin"

# Bevy is painfully slow in a fully-unoptimized debug build; optimize deps only so
# iterative dev builds of our own crates stay fast while the engine runs at speed.
[profile.dev.package."*"]
opt-level = 3
