# meshscope — realtime egui mesh instrument for the smol mesh (issue #158).
#
# A member of the rust/viz workspace (converged in #159): shares the `mesh-model`
# ingest + world-model core with observatory — "one model, two faces". Host tool
# (x86_64), deliberately separate from the embedded rust/clock firmware build.
[package]
name = "meshscope"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Realtime egui instrument for the smol ESP-NOW mesh (MQTT smol/# -> live graph)"

[dependencies]
# The shared ingest + world model (was inlined here pre-convergence).
mesh-model.workspace = true
# Immediate-mode GUI + native windowing (glow/OpenGL backend, dlopens X11/wayland at
# runtime — no build-time dev libs required).
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.28"
egui_plot = "0.28" # sparklines in the detail panel
# Load a local .env (SMOL_MQTT_HOST/USER/PASS) if present — never committed.
dotenvy.workspace = true
