# observatory — the smol mesh as a living fantasy constellation (issue #159).
#
# A Bevy showpiece over the shared `mesh-model`: glowing force-directed node orbs,
# RSSI luminous filaments, crown-travel comets on elections, OTA particle streams
# crown->leaf, channel-change colour-temperature shifts. Built for a wall display
# and the Hackaday hero clip. Correctness is meshscope's job; this one is for beauty.
#
# Pure MQTT listener (via mesh-model) — zero firmware changes, zero fleet risk.
#
# Bevy is configured `default-features = false` with a curated 2D + bloom + UI set:
# NO bevy_audio (a viz tool needs none, and it drops the libasound2 build dep), NO
# pbr/gltf/scene (2D only) — smaller, faster builds on the familiar host.
[package]
name = "observatory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Bevy fantasy-constellation visualizer for the smol ESP-NOW mesh (MQTT smol/# -> living scene)"

[dependencies]
mesh-model.workspace = true
dotenvy.workspace = true

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_winit",         # windowing / event loop
    "bevy_core_pipeline", # 2D core pass, bloom, tonemapping
    "bevy_render",        # wgpu renderer
    "bevy_sprite",        # Mesh2d + ColorMaterial (the glowing orbs)
    "bevy_gizmos",        # immediate-mode lines (filaments, particles)
    "bevy_text",          # HUD text
    "bevy_ui",            # HUD layout
    "bevy_asset",         # mesh/material handles
    "multi_threaded",     # parallel schedule
    "png",                # screenshot encoding
    "x11",                # Linux windowing (X11)
    "wayland",            # Linux windowing (Wayland)
    "tonemapping_luts",   # TonyMcMapface tonemap LUT
    "default_font",       # embedded font so HUD text needs no asset
]
